# BarCoin

./: .gitignore  BAR-COIN.md  README.md  create_admin_user.py  pyproject.toml  run.py  run_tests.py  setup.py
bar_coin/: __init__.py  app.py
bar_coin/components/: __init__.py  auth.py  dashboard.py
bar_coin/config/: __init__.py  settings.py
bar_coin/hardware/: __init__.py  coin_counter.py  mock_hardware.py  serial_handler.py
bar_coin/utils/: __init__.py  database.py  helpers.py
tests/: __init__.py  test_database.py  test_hardware.py  test_helpers.py
